Update release notes

--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...74543e3](https://github.com/cri-o/cri-o/compare/v1.23.2...74543e38e45fe3ff466d0501c77d381d3351eed2) on Fri, 17 Jun 2022 08:15:21 UTC.
+[v1.23.2...d48a5ad](https://github.com/cri-o/cri-o/compare/v1.23.2...d48a5ad3b9d48c6b791c70cb130ad02606fee677) on Wed, 22 Jun 2022 21:18:55 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz)
-- [cri-o.amd64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz.sha256sum)
-- [cri-o.arm64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz)
-- [cri-o.arm64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.74543e38e45fe3ff466d0501c77d381d3351eed2.tar.gz.sha256sum)
+- [cri-o.amd64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz)
+- [cri-o.amd64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz.sha256sum)
+- [cri-o.arm64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz)
+- [cri-o.arm64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d48a5ad3b9d48c6b791c70cb130ad02606fee677.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -34,6 +34,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5815](https://github.com/cri-o/cri-o/pull/5815), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5817](https://github.com/cri-o/cri-o/pull/5817), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5961](https://github.com/cri-o/cri-o/pull/5961), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5853](https://github.com/cri-o/cri-o/pull/5853), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
