--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,22 +12,23 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...efbbb94](https://github.com/cri-o/cri-o/compare/v1.23.2...efbbb94ad39e994957adfdaa25bcf12d30ab9778) on Thu, 23 Jun 2022 10:20:28 UTC.
+[v1.23.2...5f73f17](https://github.com/cri-o/cri-o/compare/v1.23.2...5f73f175d10a33f74f27dcbece7ecd421de5e055) on Thu, 23 Jun 2022 23:42:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz)
-- [cri-o.amd64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz.sha256sum)
-- [cri-o.arm64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz)
-- [cri-o.arm64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.efbbb94ad39e994957adfdaa25bcf12d30ab9778.tar.gz.sha256sum)
+- [cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz)
+- [cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum)
+- [cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz)
+- [cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
 ### Changes by Kind
 
 #### Bug or Regression
+ - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5770](https://github.com/cri-o/cri-o/pull/5770), [@haircommander](https://github.com/haircommander))
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5937](https://github.com/cri-o/cri-o/pull/5937), [@haircommander](https://github.com/haircommander))
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5977](https://github.com/cri-o/cri-o/pull/5977), [@haircommander](https://github.com/haircommander))
 
