--- a/v1.21.8.md
+++ b/v1.21.8.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.8
 
 The release notes have been generated for the commit range
-[v1.21.7...2a28cda](https://github.com/cri-o/cri-o/compare/v1.21.7...2a28cda523c6153b234db172c8da7e57a59cfe70) on Tue, 14 Jun 2022 07:32:12 UTC.
+[v1.21.7...d78036c](https://github.com/cri-o/cri-o/compare/v1.21.7...d78036c23eb02b1ed3913736a7656e5bd615cdc8) on Fri, 24 Jun 2022 20:08:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.2a28cda523c6153b234db172c8da7e57a59cfe70.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.2a28cda523c6153b234db172c8da7e57a59cfe70.tar.gz)
-- [cri-o.arm64.2a28cda523c6153b234db172c8da7e57a59cfe70.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.2a28cda523c6153b234db172c8da7e57a59cfe70.tar.gz)
+- [cri-o.amd64.d78036c23eb02b1ed3913736a7656e5bd615cdc8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d78036c23eb02b1ed3913736a7656e5bd615cdc8.tar.gz)
+- [cri-o.arm64.d78036c23eb02b1ed3913736a7656e5bd615cdc8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d78036c23eb02b1ed3913736a7656e5bd615cdc8.tar.gz)
 
 ## Changelog since v1.21.7
 
@@ -30,6 +30,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5897](https://github.com/cri-o/cri-o/pull/5897), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5989](https://github.com/cri-o/cri-o/pull/5989), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
