--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.5
 
 The release notes have been generated for the commit range
-[v1.22.4...c972b0a](https://github.com/cri-o/cri-o/compare/v1.22.4...c972b0afb2cd58d980d48973a2a91b39859c937e) on Wed, 22 Jun 2022 07:26:35 UTC.
+[v1.22.4...3dbcd3c](https://github.com/cri-o/cri-o/compare/v1.22.4...3dbcd3c567fd1125ce7e55eb7b3ae8eb91bf9b53) on Mon, 27 Jun 2022 07:49:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz)
-- [cri-o.arm64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz)
+- [cri-o.amd64.3dbcd3c567fd1125ce7e55eb7b3ae8eb91bf9b53.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3dbcd3c567fd1125ce7e55eb7b3ae8eb91bf9b53.tar.gz)
+- [cri-o.arm64.3dbcd3c567fd1125ce7e55eb7b3ae8eb91bf9b53.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3dbcd3c567fd1125ce7e55eb7b3ae8eb91bf9b53.tar.gz)
 
 ## Changelog since v1.22.4
 
@@ -30,6 +30,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5986](https://github.com/cri-o/cri-o/pull/5986), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5996](https://github.com/cri-o/cri-o/pull/5996), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
