--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...5f73f17](https://github.com/cri-o/cri-o/compare/v1.23.2...5f73f175d10a33f74f27dcbece7ecd421de5e055) on Thu, 23 Jun 2022 23:42:51 UTC.
+[v1.23.2...84a5d4b](https://github.com/cri-o/cri-o/compare/v1.23.2...84a5d4ba0234711c09e07962d53fa65bfa7eeb96) on Tue, 28 Jun 2022 21:44:56 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz)
-- [cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum)
-- [cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz)
-- [cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5f73f175d10a33f74f27dcbece7ecd421de5e055.tar.gz.sha256sum)
+- [cri-o.amd64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz)
+- [cri-o.amd64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz.sha256sum)
+- [cri-o.arm64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz)
+- [cri-o.arm64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.84a5d4ba0234711c09e07962d53fa65bfa7eeb96.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -31,6 +31,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5770](https://github.com/cri-o/cri-o/pull/5770), [@haircommander](https://github.com/haircommander))
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5937](https://github.com/cri-o/cri-o/pull/5937), [@haircommander](https://github.com/haircommander))
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5977](https://github.com/cri-o/cri-o/pull/5977), [@haircommander](https://github.com/haircommander))
+ - Update `cni_default_network` to not be commented by default in the output of `crio config` ([#5566](https://github.com/cri-o/cri-o/pull/5566), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5815](https://github.com/cri-o/cri-o/pull/5815), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
