Update release notes

--- a/v1.24.1.md
+++ b/v1.24.1.md
@@ -12,16 +12,16 @@
 # CRI-O v1.24.1
 
 The release notes have been generated for the commit range
-[v1.24.0...fb11a15](https://github.com/cri-o/cri-o/compare/v1.24.0...fb11a15662bd743e98a28aa92d926ea4fbb2d65e) on Thu, 14 Jul 2022 13:40:37 UTC.
+[v1.24.0...ca2d61d](https://github.com/cri-o/cri-o/compare/v1.24.0...ca2d61df3ace68249fb7b74474049e14e54e4f04) on Thu, 14 Jul 2022 21:12:19 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz)
-- [cri-o.amd64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz.sha256sum)
-- [cri-o.arm64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz)
-- [cri-o.arm64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fb11a15662bd743e98a28aa92d926ea4fbb2d65e.tar.gz.sha256sum)
+- [cri-o.amd64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz)
+- [cri-o.amd64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz.sha256sum)
+- [cri-o.arm64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz)
+- [cri-o.arm64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ca2d61df3ace68249fb7b74474049e14e54e4f04.tar.gz.sha256sum)
 
 ## Changelog since v1.24.0
 
@@ -35,6 +35,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5960](https://github.com/cri-o/cri-o/pull/5960), [@haircommander](https://github.com/haircommander))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6054](https://github.com/cri-o/cri-o/pull/6054), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
