Update release notes

--- a/v1.20.8.md
+++ b/v1.20.8.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.20.7](#changelog-since-v1207)
     - [Changes by Kind](#changes-by-kind)
+      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -11,18 +12,22 @@
 # CRI-O v1.20.8
 
 The release notes have been generated for the commit range
-[v1.20.7...ffd7f95](https://github.com/cri-o/cri-o/compare/v1.20.7...ffd7f955431fb684e89bac770e5d7bd93b09b4b3) on Tue, 14 Jun 2022 09:24:57 UTC.
+[v1.20.7...43f4fdb](https://github.com/cri-o/cri-o/compare/v1.20.7...43f4fdb37ecc2460319158dd98d6bf8f05f6c517) on Fri, 15 Jul 2022 07:05:44 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ffd7f955431fb684e89bac770e5d7bd93b09b4b3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.ffd7f955431fb684e89bac770e5d7bd93b09b4b3.tar.gz)
-- [cri-o.arm64.ffd7f955431fb684e89bac770e5d7bd93b09b4b3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.ffd7f955431fb684e89bac770e5d7bd93b09b4b3.tar.gz)
+- [cri-o.amd64.43f4fdb37ecc2460319158dd98d6bf8f05f6c517.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.43f4fdb37ecc2460319158dd98d6bf8f05f6c517.tar.gz)
+- [cri-o.arm64.43f4fdb37ecc2460319158dd98d6bf8f05f6c517.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.43f4fdb37ecc2460319158dd98d6bf8f05f6c517.tar.gz)
 
 ## Changelog since v1.20.7
 
 ### Changes by Kind
+
+#### Feature
+ - Added `container_runtime_crio_containers_oom_total` and  `container_runtime_crio_containers_oom` metrics,
+  which collects out of memory (oom) containers. ([#5706](https://github.com/cri-o/cri-o/pull/5706), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5951](https://github.com/cri-o/cri-o/pull/5951), [@haircommander](https://github.com/haircommander))
