Update release notes

--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.5
 
 The release notes have been generated for the commit range
-[v1.22.4...066344a](https://github.com/cri-o/cri-o/compare/v1.22.4...066344ade9218fd9c58aa98f326b4d5256e0d250) on Thu, 14 Jul 2022 12:38:22 UTC.
+[v1.22.4...e5b6040](https://github.com/cri-o/cri-o/compare/v1.22.4...e5b604095fb7921782bbf946e40e936c02626b98) on Mon, 18 Jul 2022 15:48:41 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.066344ade9218fd9c58aa98f326b4d5256e0d250.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.066344ade9218fd9c58aa98f326b4d5256e0d250.tar.gz)
-- [cri-o.arm64.066344ade9218fd9c58aa98f326b4d5256e0d250.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.066344ade9218fd9c58aa98f326b4d5256e0d250.tar.gz)
+- [cri-o.amd64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz)
+- [cri-o.arm64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz)
 
 ## Changelog since v1.22.4
 
@@ -32,6 +32,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5996](https://github.com/cri-o/cri-o/pull/5996), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#6061](https://github.com/cri-o/cri-o/pull/6061), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
