Update release notes

--- a/v1.21.8.md
+++ b/v1.21.8.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.8
 
 The release notes have been generated for the commit range
-[v1.21.7...98072b9](https://github.com/cri-o/cri-o/compare/v1.21.7...98072b9b3da1bb66650c5e13c7929ab42ff9aeb7) on Thu, 14 Jul 2022 18:49:42 UTC.
+[v1.21.7...f3c5753](https://github.com/cri-o/cri-o/compare/v1.21.7...f3c5753270fc06bc355f4474a1db8faaacb008c8) on Sun, 24 Jul 2022 20:38:01 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.98072b9b3da1bb66650c5e13c7929ab42ff9aeb7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.98072b9b3da1bb66650c5e13c7929ab42ff9aeb7.tar.gz)
-- [cri-o.arm64.98072b9b3da1bb66650c5e13c7929ab42ff9aeb7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.98072b9b3da1bb66650c5e13c7929ab42ff9aeb7.tar.gz)
+- [cri-o.amd64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz)
+- [cri-o.arm64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz)
 
 ## Changelog since v1.21.7
 
@@ -29,6 +29,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5950](https://github.com/cri-o/cri-o/pull/5950), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Avoid a deadlock while moving conmon to a different system scope (RHBZ#2082344) ([#5914](https://github.com/cri-o/cri-o/pull/5914), [@kolyshkin](https://github.com/kolyshkin))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5897](https://github.com/cri-o/cri-o/pull/5897), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5989](https://github.com/cri-o/cri-o/pull/5989), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
