--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...ddf4b1a](https://github.com/cri-o/cri-o/compare/v1.23.2...ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b) on Thu, 14 Jul 2022 14:17:41 UTC.
+[v1.23.2...5c7651a](https://github.com/cri-o/cri-o/compare/v1.23.2...5c7651a3c1f9e0314afa6cf167dab2b4631b327d) on Fri, 05 Aug 2022 10:04:58 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz)
-- [cri-o.amd64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz.sha256sum)
-- [cri-o.arm64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz)
-- [cri-o.arm64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ddf4b1a291e4fddb59da86104a8df00a0f6e8a9b.tar.gz.sha256sum)
+- [cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz)
+- [cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum)
+- [cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz)
+- [cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -40,6 +40,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5853](https://github.com/cri-o/cri-o/pull/5853), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6053](https://github.com/cri-o/cri-o/pull/6053), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
