Update release notes

--- a/v1.24.2.md
+++ b/v1.24.2.md
@@ -2,8 +2,9 @@
   - [Downloads](#downloads)
   - [Changelog since v1.24.1](#changelog-since-v1241)
     - [Changes by Kind](#changes-by-kind)
+      - [Dependency-Change](#dependency-change)
+      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
-      - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
     - [Changed](#changed)
@@ -12,29 +13,47 @@
 # CRI-O v1.24.2
 
 The release notes have been generated for the commit range
-[v1.24.1...bd548b0](https://github.com/cri-o/cri-o/compare/v1.24.1...bd548b04f78a30e1e9d7c17162714edd50edd6ca) on Mon, 25 Jul 2022 21:51:52 UTC.
+[v1.24.1...v1.24.2](https://github.com/cri-o/cri-o/compare/v1.24.1...v1.24.2) on Mon, 08 Aug 2022 16:48:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz)
-- [cri-o.amd64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz.sha256sum)
-- [cri-o.arm64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz)
-- [cri-o.arm64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bd548b04f78a30e1e9d7c17162714edd50edd6ca.tar.gz.sha256sum)
+- [cri-o.amd64.v1.24.2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.2.tar.gz)
+- [cri-o.amd64.v1.24.2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.2.tar.gz.sha256sum)
+- [cri-o.arm64.v1.24.2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.2.tar.gz)
+- [cri-o.arm64.v1.24.2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.2.tar.gz.sha256sum)
 
 ## Changelog since v1.24.1
 
 ### Changes by Kind
 
-#### Bug or Regression
- - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5935](https://github.com/cri-o/cri-o/pull/5935), [@haircommander](https://github.com/haircommander))
- - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5943](https://github.com/cri-o/cri-o/pull/5943), [@haircommander](https://github.com/haircommander))
+#### Dependency-Change
+ - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5949](https://github.com/cri-o/cri-o/pull/5949), [@haircommander](https://github.com/haircommander))
+ - Updated crun to v1.5. ([#6078](https://github.com/cri-o/cri-o/pull/6078), [@saschagrunert](https://github.com/saschagrunert))
+ - Updated golang dependencies ([#5917](https://github.com/cri-o/cri-o/pull/5917), [@saschagrunert](https://github.com/saschagrunert))
 
-#### Uncategorized
- - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5960](https://github.com/cri-o/cri-o/pull/5960), [@haircommander](https://github.com/haircommander))
- - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
- - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6054](https://github.com/cri-o/cri-o/pull/6054), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+#### Feature
+ - Added support for setting the max log size in the pod runtime (used by conmonrs). ([#6083](https://github.com/cri-o/cri-o/pull/6083), [@saschagrunert](https://github.com/saschagrunert))
+ - Fallback to the internal seccomp profile if the one specified in the config cannot be found on disk. ([#6029](https://github.com/cri-o/cri-o/pull/6029), [@saschagrunert](https://github.com/saschagrunert))
+ - If `$KUBENSMNT` is defined in the environment, assume the file it points at is
+  a bindmount to a mount namespace that CRI-O should join:
+  - If the environment variable is not set, take no action.
+  - If the environment variable is set and points at a valid mount
+    namespace, CRI-O will join that mount namespace.
+  - If the environment variable is set but points at a missing file, or the file
+    is not a valid mount namespace, CRI-O will print a warning but continue to
+    run in the original mount namespace. ([#5974](https://github.com/cri-o/cri-o/pull/5974), [@lack](https://github.com/lack))
+ - Now CRI-O honors the user namespace configuration that the Kubelet specified ([#6004](https://github.com/cri-o/cri-o/pull/6004), [@giuseppe](https://github.com/giuseppe))
+ - This PR introduces additional annotations that can be optionally used to configure power management features for containers. It does not impact existing users who do not use the new annotations. ([#5927](https://github.com/cri-o/cri-o/pull/5927), [@bartwensley](https://github.com/bartwensley))
+ - Updated `get` script to verify the SBOM if the [bom tool](https://github.com/kubernetes-sigs/bom) is available in `$PATH`. ([#5992](https://github.com/cri-o/cri-o/pull/5992), [@saschagrunert](https://github.com/saschagrunert))
+ - We now provide a bill of materials for the static binary bundle. ([#5988](https://github.com/cri-o/cri-o/pull/5988), [@saschagrunert](https://github.com/saschagrunert))
+ - We now sign the static binary bundle via sigstore signatures. This also includes support for the [get script](https://github.com/cri-o/cri-o/blob/main/scripts/get). ([#5975](https://github.com/cri-o/cri-o/pull/5975), [@saschagrunert](https://github.com/saschagrunert))
+
+#### Bug or Regression
+ - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5922](https://github.com/cri-o/cri-o/pull/5922), [@kolyshkin](https://github.com/kolyshkin))
+ - If the ProcMountType feature gate is enabled, CRI-O now honors the ProcMount securityContext set. ([#6025](https://github.com/cri-o/cri-o/pull/6025), [@dgl](https://github.com/dgl))
+ - Update `version-file-persist` to be empty by default, and do not wipe images when it is so. ([#6022](https://github.com/cri-o/cri-o/pull/6022), [@haircommander](https://github.com/haircommander))
 
 ## Dependencies
 
