--- a/v1.24.2.md
+++ b/v1.24.2.md
@@ -12,16 +12,16 @@
 # CRI-O v1.24.2
 
 The release notes have been generated for the commit range
-[v1.24.1...v1.24.2](https://github.com/cri-o/cri-o/compare/v1.24.1...v1.24.2) on Tue, 09 Aug 2022 12:49:33 EDT.
+[v1.24.1...d6283df](https://github.com/cri-o/cri-o/compare/v1.24.1...d6283df4ea77c1027a8affbcc8e5f5548d77572f) on Wed, 10 Aug 2022 14:14:38 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.v1.24.2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.2.tar.gz)
-- [cri-o.amd64.v1.24.2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.2.tar.gz.sha256sum)
-- [cri-o.arm64.v1.24.2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.2.tar.gz)
-- [cri-o.arm64.v1.24.2.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.2.tar.gz.sha256sum)
+- [cri-o.amd64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz)
+- [cri-o.amd64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz.sha256sum)
+- [cri-o.arm64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz)
+- [cri-o.arm64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d6283df4ea77c1027a8affbcc8e5f5548d77572f.tar.gz.sha256sum)
 
 ## Changelog since v1.24.1
 
@@ -32,6 +32,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5943](https://github.com/cri-o/cri-o/pull/5943), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a bug where a container is stuck in INIT because CRI-O believes it to be paused, and never updates the state ([#6129](https://github.com/cri-o/cri-o/pull/6129), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5960](https://github.com/cri-o/cri-o/pull/5960), [@haircommander](https://github.com/haircommander))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6054](https://github.com/cri-o/cri-o/pull/6054), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
