--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...5c7651a](https://github.com/cri-o/cri-o/compare/v1.23.2...5c7651a3c1f9e0314afa6cf167dab2b4631b327d) on Fri, 05 Aug 2022 10:04:58 UTC.
+[v1.23.2...6af791c](https://github.com/cri-o/cri-o/compare/v1.23.2...6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3) on Wed, 10 Aug 2022 17:31:51 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz)
-- [cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum)
-- [cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz)
-- [cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.5c7651a3c1f9e0314afa6cf167dab2b4631b327d.tar.gz.sha256sum)
+- [cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz)
+- [cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum)
+- [cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz)
+- [cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -36,6 +36,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5815](https://github.com/cri-o/cri-o/pull/5815), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5817](https://github.com/cri-o/cri-o/pull/5817), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where a container is stuck in INIT because CRI-O believes it to be paused, and never updates the state ([#6143](https://github.com/cri-o/cri-o/pull/6143), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5961](https://github.com/cri-o/cri-o/pull/5961), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
