Update release notes

--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.5
 
 The release notes have been generated for the commit range
-[v1.22.4...e5b6040](https://github.com/cri-o/cri-o/compare/v1.22.4...e5b604095fb7921782bbf946e40e936c02626b98) on Mon, 18 Jul 2022 15:48:41 UTC.
+[v1.22.4...70fb67b](https://github.com/cri-o/cri-o/compare/v1.22.4...70fb67b4a453c436c06d4ec299a76855a35ee6ab) on Thu, 11 Aug 2022 19:01:24 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz)
-- [cri-o.arm64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e5b604095fb7921782bbf946e40e936c02626b98.tar.gz)
+- [cri-o.amd64.70fb67b4a453c436c06d4ec299a76855a35ee6ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.70fb67b4a453c436c06d4ec299a76855a35ee6ab.tar.gz)
+- [cri-o.arm64.70fb67b4a453c436c06d4ec299a76855a35ee6ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.70fb67b4a453c436c06d4ec299a76855a35ee6ab.tar.gz)
 
 ## Changelog since v1.22.4
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5996](https://github.com/cri-o/cri-o/pull/5996), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#6061](https://github.com/cri-o/cri-o/pull/6061), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6052](https://github.com/cri-o/cri-o/pull/6052), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
