Update release notes

--- a/v1.21.8.md
+++ b/v1.21.8.md
@@ -12,14 +12,14 @@
 # CRI-O v1.21.8
 
 The release notes have been generated for the commit range
-[v1.21.7...f3c5753](https://github.com/cri-o/cri-o/compare/v1.21.7...f3c5753270fc06bc355f4474a1db8faaacb008c8) on Sun, 24 Jul 2022 20:38:01 UTC.
+[v1.21.7...eb54c0b](https://github.com/cri-o/cri-o/compare/v1.21.7...eb54c0bed88362602775eb7777e48554f96293b2) on Tue, 23 Aug 2022 15:08:36 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz)
-- [cri-o.arm64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f3c5753270fc06bc355f4474a1db8faaacb008c8.tar.gz)
+- [cri-o.amd64.eb54c0bed88362602775eb7777e48554f96293b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.eb54c0bed88362602775eb7777e48554f96293b2.tar.gz)
+- [cri-o.arm64.eb54c0bed88362602775eb7777e48554f96293b2.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.eb54c0bed88362602775eb7777e48554f96293b2.tar.gz)
 
 ## Changelog since v1.21.7
 
@@ -32,6 +32,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Avoid a deadlock while moving conmon to a different system scope (RHBZ#2082344) ([#5914](https://github.com/cri-o/cri-o/pull/5914), [@kolyshkin](https://github.com/kolyshkin))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5897](https://github.com/cri-o/cri-o/pull/5897), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5989](https://github.com/cri-o/cri-o/pull/5989), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6039](https://github.com/cri-o/cri-o/pull/6039), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
