--- a/v1.24.2.md
+++ b/v1.24.2.md
@@ -12,16 +12,16 @@
 # CRI-O v1.24.2
 
 The release notes have been generated for the commit range
-[v1.24.1...1e1445e](https://github.com/cri-o/cri-o/compare/v1.24.1...1e1445eb33d85b0e1899737a57d14fb671139a15) on Wed, 24 Aug 2022 15:29:12 UTC.
+[v1.24.1...b67c16f](https://github.com/cri-o/cri-o/compare/v1.24.1...b67c16f8d54c1a842af83ebeb2cf603dcf958b19) on Wed, 24 Aug 2022 21:36:03 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz)
-- [cri-o.amd64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz.sha256sum)
-- [cri-o.arm64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz)
-- [cri-o.arm64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1e1445eb33d85b0e1899737a57d14fb671139a15.tar.gz.sha256sum)
+- [cri-o.amd64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz)
+- [cri-o.amd64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz.sha256sum)
+- [cri-o.arm64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz)
+- [cri-o.arm64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b67c16f8d54c1a842af83ebeb2cf603dcf958b19.tar.gz.sha256sum)
 
 ## Changelog since v1.24.1
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Fix a bug where a container is stuck in INIT because CRI-O believes it to be paused, and never updates the state ([#6129](https://github.com/cri-o/cri-o/pull/6129), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where exit files were never cleaned up from `/run/crio/exits` ([#6149](https://github.com/cri-o/cri-o/pull/6149), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5960](https://github.com/cri-o/cri-o/pull/5960), [@haircommander](https://github.com/haircommander))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6054](https://github.com/cri-o/cri-o/pull/6054), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
