--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...6af791c](https://github.com/cri-o/cri-o/compare/v1.23.2...6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3) on Wed, 10 Aug 2022 17:31:51 UTC.
+[v1.23.2...d7c9b35](https://github.com/cri-o/cri-o/compare/v1.23.2...d7c9b35c980f136ba8eae7951e3d32b78e30f805) on Thu, 25 Aug 2022 12:18:23 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz)
-- [cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum)
-- [cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz)
-- [cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.6af791c5f86ff9d024d2fb85dd84cb8bd745ffa3.tar.gz.sha256sum)
+- [cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz)
+- [cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum)
+- [cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz)
+- [cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -31,6 +31,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5770](https://github.com/cri-o/cri-o/pull/5770), [@haircommander](https://github.com/haircommander))
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5937](https://github.com/cri-o/cri-o/pull/5937), [@haircommander](https://github.com/haircommander))
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5977](https://github.com/cri-o/cri-o/pull/5977), [@haircommander](https://github.com/haircommander))
+ - Revert fix for CVE-2022-27652 by re-adding inheritable capabilities. While there is a workaround, we believe this causes regression mid cycle with is contrary to CRI-O's backporting policy. The risk of the CVE is low, and so there is little risk in reverting here. ([#6168](https://github.com/cri-o/cri-o/pull/6168), [@haircommander](https://github.com/haircommander))
  - Update `cni_default_network` to not be commented by default in the output of `crio config` ([#5566](https://github.com/cri-o/cri-o/pull/5566), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
