Update release notes

--- a/v1.23.3.md
+++ b/v1.23.3.md
@@ -12,16 +12,16 @@
 # CRI-O v1.23.3
 
 The release notes have been generated for the commit range
-[v1.23.2...d7c9b35](https://github.com/cri-o/cri-o/compare/v1.23.2...d7c9b35c980f136ba8eae7951e3d32b78e30f805) on Thu, 25 Aug 2022 12:18:23 UTC.
+[v1.23.2...016b1ca](https://github.com/cri-o/cri-o/compare/v1.23.2...016b1ca1776948187fcbe10b4d12fb7f06a66dfa) on Fri, 09 Sep 2022 14:13:37 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz)
-- [cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum)
-- [cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz)
-- [cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d7c9b35c980f136ba8eae7951e3d32b78e30f805.tar.gz.sha256sum)
+- [cri-o.amd64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz)
+- [cri-o.amd64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz.sha256sum)
+- [cri-o.arm64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz)
+- [cri-o.arm64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.016b1ca1776948187fcbe10b4d12fb7f06a66dfa.tar.gz.sha256sum)
 
 ## Changelog since v1.23.2
 
@@ -38,6 +38,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5815](https://github.com/cri-o/cri-o/pull/5815), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5817](https://github.com/cri-o/cri-o/pull/5817), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where a container is stuck in INIT because CRI-O believes it to be paused, and never updates the state ([#6143](https://github.com/cri-o/cri-o/pull/6143), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where exit files were never cleaned up from `/run/crio/exits` ([#6171](https://github.com/cri-o/cri-o/pull/6171), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5961](https://github.com/cri-o/cri-o/pull/5961), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
