Update release notes

--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.5
 
 The release notes have been generated for the commit range
-[v1.22.4...d14fede](https://github.com/cri-o/cri-o/compare/v1.22.4...d14fede06b6da80e1f5625de21d333306779b5ba) on Thu, 25 Aug 2022 15:19:30 UTC.
+[v1.22.4...7b703c6](https://github.com/cri-o/cri-o/compare/v1.22.4...7b703c6a3ff63d418daa6751c46e23c1fa9a1115) on Mon, 12 Sep 2022 21:55:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d14fede06b6da80e1f5625de21d333306779b5ba.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d14fede06b6da80e1f5625de21d333306779b5ba.tar.gz)
-- [cri-o.arm64.d14fede06b6da80e1f5625de21d333306779b5ba.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d14fede06b6da80e1f5625de21d333306779b5ba.tar.gz)
+- [cri-o.amd64.7b703c6a3ff63d418daa6751c46e23c1fa9a1115.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7b703c6a3ff63d418daa6751c46e23c1fa9a1115.tar.gz)
+- [cri-o.arm64.7b703c6a3ff63d418daa6751c46e23c1fa9a1115.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7b703c6a3ff63d418daa6751c46e23c1fa9a1115.tar.gz)
 
 ## Changelog since v1.22.4
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5996](https://github.com/cri-o/cri-o/pull/5996), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#6061](https://github.com/cri-o/cri-o/pull/6061), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5854](https://github.com/cri-o/cri-o/pull/5854), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Revert fix for CVE-2022-27652 by re-adding inheritable capabilities. While there is a workaround, we believe this causes regression mid cycle with is contrary to CRI-O's backporting policy. The risk of the CVE is low, and so there is little risk in reverting here. ([#6172](https://github.com/cri-o/cri-o/pull/6172), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Use default umask `0o022` if CRI-O runs under a different umask value. ([#6052](https://github.com/cri-o/cri-o/pull/6052), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
